--- a/templates/base.html
+++ b/templates/base.html
@@ -3,6 +3,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet">
     <link href="{% static 'datepicker/css/bootstrap-datetimepicker.min.css' %}" rel="stylesheet">
     <script src="{% static 'js/jquery.1.9.1.js' %}"></script>
